# metalfs

./: .buildinfo  .clang-format  .dockerignore  .drone.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  README.md  buildpacks.html  deployment.html  docker-compose.yml  docker-dev.html  genindex.html  image-manifest.html  index.html  metal-filesystem-pipeline.html  metal-filesystem.html  metal-pipeline.html  metal_fs-config.cmake  objects.inv  operator-manifest.html  operator-parameters.html  prerequisites.html  search.html  searchindex.js  tutorial.html
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.doctrees/: buildpacks.doctree  deployment.doctree  docker-dev.doctree  environment.pickle  genindex.doctree  image-manifest.doctree  index.doctree  metal-filesystem-pipeline.doctree  metal-filesystem.doctree  metal-pipeline.doctree  operator-manifest.doctree  operator-parameters.doctree  prerequisites.doctree  tutorial.doctree
_sources/: buildpacks.rst.txt  index.rst.txt  metal-pipeline.rst.txt  operator-parameters.rst.txt  tutorial.rst.txt
cmake/: CompileOptions.cmake  FindFUSE.cmake  FindFuse.cmake  Findjq.cmake  (+7 more)
docs/api-docs/: CMakeLists.txt  conf.py  index.rst  prerequisites.rst  requirements.txt  tutorial.rst
example/test/: CMakeLists.txt  base_test.cpp  base_test.hpp  blowfish_pipeline_test.cpp  changecase_pipeline_test.cpp  colorfilter_pipeline_test.cpp  dram_pipeline_test.cpp  gtest_main.cpp  image_info_test.cpp  nvme_pipeline_test.cpp  profiling_test.cpp  readwrite_pipeline_test.cpp
src/libmetal_test/: CMakeLists.txt  base_test.cpp  base_test.hpp  extent_test.cpp  gtest_main.cpp  heap_test.cpp  metal_test.cpp
src/metal-driver/: CMakeLists.txt  agent_data_sink.cpp  agent_data_sink.hpp  agent_data_sink_context.cpp  agent_data_sink_context.hpp  agent_data_source_context.cpp  agent_data_source_context.hpp  agent_pool.cpp  agent_pool.hpp  buffer_data_source.cpp  buffer_data_source.hpp  client_error.hpp  combined_fuse_handler.cpp  combined_fuse_handler.hpp  configured_pipeline.hpp  filesystem_fuse_handler.cpp  filesystem_fuse_handler.hpp  fuse_handler.hpp  metal_fs.cpp  metal_fuse_operations.cpp  metal_fuse_operations.hpp  operator_agent.cpp  operator_agent.hpp  operator_fuse_handler.cpp  operator_fuse_handler.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_loop.cpp  pipeline_loop.hpp  pseudo_operators.cpp  pseudo_operators.hpp  registered_agent.cpp  registered_agent.hpp  server.cpp  server.hpp  socket_fuse_handler.cpp  socket_fuse_handler.hpp
src/metal_afus/: CMakeLists.txt  afus.h
src/metal_afus/afu_change_case/: afu.c  afu.h
src/metal_afus/afu_passthrough/: afu.c  afu.h
src/metal_afus/afu_read_mem/: afu.c  afu.h
src/metal_afus/afu_uppercase/: afu.c  afu.h
src/metal_afus/afu_write_mem/: afu.c  afu.h
src/metal_filesystem/: CMakeLists.txt  extent.c  extent.h  heap.h  inode.c  inode.h  meta.c  metal.c  metal.h  storage.h  storage_in_memory.c
src/metal_filesystem_pipeline/: CMakeLists.txt  file_data_sink.cpp  file_data_sink.hpp  file_data_source.cpp  file_data_source.hpp  filesystem_pipeline_runner.cpp  filesystem_pipeline_runner.hpp  metal_pipeline_storage.cpp  metal_pipeline_storage.hpp
src/metal_frontend/: CMakeLists.txt
src/metal_frontend/afu_agent/: CMakeLists.txt  afu_agent.c
src/metal_frontend/common/: buffer.c  buffer.cpp  buffer.h  buffer.hpp  known_afus.c  known_afus.h  known_operators.c  known_operators.h  message.h  socket.hpp
src/metal_frontend/fs/: CMakeLists.txt  accfs.c
src/metal_frontend/fs/actions/blowfish/: action_blowfish.c  action_blowfish.h
src/metal_frontend/messages/: CMakeLists.txt  Messages.proto  buffer.cpp  buffer.hpp  message_header.cpp  message_header.hpp  socket.hpp
src/metal_frontend/metal_fs/: CMakeLists.txt  afu.c  agent_pool.cpp  agent_pool.hpp  agent_worker.c  agent_worker.h  metal_fs.c  metal_fs.cpp  metal_fuse_operations.cpp  metal_fuse_operations.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_loop.cpp  pipeline_loop.hpp  registered_agent.h  registered_agent.hpp  server.c  server.cpp  server.hpp
src/metal_frontend/operator_agent/: CMakeLists.txt  operator_agent.c  operator_agent.cpp
src/metal_operators/: CMakeLists.txt  all_operators.h  operators.h
src/metal_operators/op_blowfish_decrypt/: operator.c  operator.h
src/metal_operators/op_blowfish_encrypt/: operator.c  operator.h
src/metal_operators/op_change_case/: operator.c  operator.h
src/metal_operators/op_passthrough/: operator.c  operator.h
src/metal_operators/op_read_file/: operator.c  operator.h
src/metal_operators/op_read_mem/: operator.c  operator.h
src/metal_operators/op_write_file/: operator.c  operator.h
src/metal_operators/op_write_mem/: operator.c  operator.h
src/metal_pipeline/: CMakeLists.txt  abstract_operator.cpp  abstract_operator.hpp  data_sink.cpp  data_sink.hpp  data_source.cpp  data_source.hpp  operator_argument.hpp  operator_registry.cpp  operator_registry.hpp  operator_template.hpp  pipeline.c  pipeline.cpp  pipeline.h  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_definition.cpp  pipeline_definition.hpp  pipeline_runner.cpp  pipeline_runner.hpp  snap_action.cpp  snap_action.hpp  user_operator.cpp  user_operator.hpp
src/metal_storage/: CMakeLists.txt  in_memory.c  metal_fpga.c  metal_hdl_example.c  metal_pipeline.c  snap_fs.c  snap_fs.h  storage.c  storage.h
test/metal_filesystem_test/: CMakeLists.txt  base_test.cpp  extent_test.cpp  gtest_main.cpp  heap_test.cpp  metal_test.cpp
test/metal_pipeline_test/: CMakeLists.txt  base_test.cpp  base_test.hpp  blowfish_pipeline_test.cpp  changecase_pipeline_test.cpp  colorfilter_pipeline_test.cpp  gtest_main.cpp  operator_registry_test.cpp  profiling_test.cpp  readwrite_pipeline_test.cpp  thesis_test.cpp  user_operator_test.cpp
test/metal_pipeline_test/operators/: blowfish_decrypt.json  blowfish_encrypt.json  change_case.json  changecase.json
test/metal_storage_test/: CMakeLists.txt  base_test.cpp  base_test.hpp  storage_test.cpp
(+552 files in other folders)
